--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:insert="/head::head"/>
+<th:block th:insert="head::head"/>
 
 <body>
 
@@ -71,7 +71,7 @@
 
 
 
-<th:block th:insert="/footer::footer"/>
+<th:block th:insert="footer::footer"/>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
