--- a/src/main/resources/templates/ComparativaPrecio/graficoPrecios.html
+++ b/src/main/resources/templates/ComparativaPrecio/graficoPrecios.html
@@ -24,13 +24,13 @@
     }
 </style>
 
-<th:block th:insert="/head::head"/>
+<th:block th:insert="head::head"/>
 
 <body>
 
-<th:block th:insert="/header::header"/>
+<th:block th:insert="header::header"/>
 
-<th:block th:insert="/sideBar::sideBar"/>
+<th:block th:insert="sideBar::sideBar"/>
 
 <main id="main" class="main">
 
@@ -172,7 +172,7 @@
 
 </main><!-- End #main -->
 
-<th:block th:insert="/footer::footer"/>
+<th:block th:insert="footer::footer"/>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
