--- a/src/main/resources/templates/introducir-producto.html
+++ b/src/main/resources/templates/introducir-producto.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<th:block th:insert="/head::head"/>
+<th:block th:insert="head::head"/>
 
 <body onload="comprobarFoto()">
 
-<th:block th:insert="/header::header"/>
+<th:block th:insert="header::header"/>
 
-<th:block th:insert="/sideBar::sideBar"/>
+<th:block th:insert="sideBar::sideBar"/>
 
 <main id="main" class="main">
 
@@ -16,14 +16,14 @@
     <section class="section dashboard">
         <div class="row">
 
-            <th:block th:insert="/formulario-producto::formulario-producto"/>
+            <th:block th:insert="formulario-producto::formulario-producto"/>
 
         </div>
     </section>
 
 </main><!-- End #main -->
 
-<th:block th:insert="/footer::footer"/>
+<th:block th:insert="footer::footer"/>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
