--- a/src/main/resources/templates/Perfil/perfil.html
+++ b/src/main/resources/templates/Perfil/perfil.html
@@ -20,7 +20,7 @@
 
                 <div class="card">
                     <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-                        <img th:src="${img}" style="width: 460px; height: 460px;" alt="Profile" class="rounded-circle">
+                        <img th:src="${fotoPerfil}" style="width: 460px; height: 460px;" alt="Profile" class="rounded-circle">
                         <h2 th:text="${nombre}">Producto</h2>
                     </div>
                 </div>
