--- a/src/main/resources/templates/Perfil/perfil.html
+++ b/src/main/resources/templates/Perfil/perfil.html
@@ -73,7 +73,7 @@
                                             <div class="row mb-3">
                                                 <label for="inputPassword" class="col-sm-2 col-form-label">Imagen</label>
                                                 <div class="col-sm-10">
-                                                    <textarea readonly type="text" class="form-control" th:name="img" id="imagen" th:text="${fotoPerfil}"/>
+                                                    <textarea readonly type="text" class="form-control" id="imagen" th:text="${fotoPerfil}" th:name="img"/>
                                                 </div>
                                             </div>
 
@@ -88,7 +88,7 @@
                                             <div class="row mb-3">
                                                 <label for="inputText" class="col-sm-2 col-form-label">Correo electronico</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" class="form-control" th:name="correo" th:value="${correo}">
+                                                    <input type="text" class="form-control" th:value="${correo}" th:name="correo">
                                                 </div>
                                             </div>
 
