--- a/src/main/resources/templates/Proveedores/detalleProveedor.html
+++ b/src/main/resources/templates/Proveedores/detalleProveedor.html
@@ -178,7 +178,7 @@
                                         <tbody>
                                         <tr th:each="datos2: ${datos2}">
                                             <th scope="row" style="display: inline;"><a href="#"><img style="width: 60px; height: 50px;" th:src="${datos2.img}" referrerpolicy="no-referrer" alt=""></a></th>
-                                            <td style="display: inline;"><a th:href="@{'/detalleProductos?id='+${datos2.id}}" class="text-primary fw-bold" th:text="${datos2.nombre}">Ut inventore ipsa voluptas nulla</a></td>
+                                            <td style="display: inline-block;"><a th:href="@{'/detalleProductos?id='+${datos2.id}}" class="text-primary fw-bold" th:text="${datos2.nombre}">Ut inventore ipsa voluptas nulla</a></td>
                                             <td class="fw-bold"><input type="number" step="any" th:id="'introducirPrecio'+${datos2.id}" class="form-control" th:name="precio"></td>
                                             <td class="fw-bold"><input type="button" th:onclick="'anadirProducto('+${datos2.id}+','+${idProveedor}+',1)'" class="btn btn-primary" value="Añadir"></td>
                                         </tr>
