--- a/src/main/resources/templates/CodigosTrazabilidad/introducirCodigoTrazabilidad.html
+++ b/src/main/resources/templates/CodigosTrazabilidad/introducirCodigoTrazabilidad.html
@@ -16,19 +16,42 @@
     <section class="section dashboard">
         <div class="row">
 
-            <th:block th:insert="CodigosTrazabilidad/formularioCodigoTrazabilidad::formularioCodigoTrazabilidad"/>
+            <th:block th:insert="barcode::barcode"></th:block>
+
+            <button type="submit" onclick="introducirCodigo()" class="btn btn-primary">Introducir codigo</button>
+
 
         </div>
     </section>
 
 </main><!-- End #main -->
 
+<script>
+    function introducirCodigo() {
+        var inputCodigo = document.getElementById("scanner_input");
+        window.location.replace(window.location+"&codigoTrazabilidad="+inputCodigo.value);
+    }
+</script>
+
+
 <th:block th:insert="footer::footer"/>
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
 
-<th:block th:insert="scripts::scripts"/>
+<!-- Vendor JS Files -->
+<script src="/js/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="/js/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/js/vendor/chart.js/chart.min.js"></script>
+<script src="/js/vendor/echarts/echarts.min.js"></script>
+<script src="/js/vendor/quill/quill.min.js"></script>
+<script src="/js/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="/js/vendor/tinymce/tinymce.min.js"></script>
+<script src="/js/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="/js/main.js"></script>
+
 </body>
 
 </html>
