--- a/src/main/resources/templates/Proveedores/detalleProveedor.html
+++ b/src/main/resources/templates/Proveedores/detalleProveedor.html
@@ -169,9 +169,7 @@
                                         <thead>
                                         <tr>
                                             <th scope="col">Imagen</th>
-                                            <th scope="col" th:text="${tipo}">Tabla</th>
-                                            <th scope="col">Categoria</th>
-                                            <th scope="col">precio</th>
+                                            <th scope="col">Precio</th>
                                             <th scope="col">Añadir proveedor</th>
                                         </tr>
                                         </thead>
