--- a/src/main/resources/templates/formulario-producto.html
+++ b/src/main/resources/templates/formulario-producto.html
@@ -37,7 +37,7 @@
                   </div>
                 </div>
 
-                <div class="row mb-3" style="display: none;">
+                <div class="row mb-3">
                   <label for="inputPassword" class="col-sm-2 col-form-label">Codigo</label>
                   <div class="col-sm-10">
                     <input type="text" class="form-control" th:name="codigoTrazabilidad" id="codigo" th:value="${cod}">
