--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,7 +12,7 @@
         <section class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
             <h1>404</h1>
             <h2>La pagina no ha sido encontrada</h2>
-            <a class="btn" th:href="@{index}">Volver al inicio</a>
+            <a class="btn" th:href="@{index}">Volver</a>
             <img src="/img/not-found.svg" class="img-fluid py-5" alt="Page Not Found">
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
